Fix build paths and env variables

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ​<!-- end list -->
 !DOCTYPE html>
+<script type="module" src="/main.tsx"></script>
+
+<script type="module" src="/src/main.tsx"></script>
 <html lang="hu">
   <head>
     <meta charset="UTF-8" />
