Fix: correctly point index.html to src/main.tsx

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ​<!-- end list -->
 !DOCTYPE html>
-<script type="module" src="/main.tsx"></script>
-
+<script type="module" src="/src/main.tsx"></script>
 <script type="module" src="/src/main.tsx"></script>
 <html lang="hu">
   <head>
