--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
-​<!-- end list -->
-!DOCTYPE html>
-<script type="module" src="/src/main.tsx"></script>
-<script type="module" src="/src/main.tsx"></script>
+<!DOCTYPE html>
 <html lang="hu">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Airdrop Agent</title>
+    <title>Airdrop AI Agent</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
 
