--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+v<!DOCTYPE html>
 <html lang="hu">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
-<script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/ src/main.tsx"></script>
   </body>
 </html>
 
